--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ category-encoders = "^2.6.3"
 reverse-geocoder = "^1.5.1"
 folium = "^0.15.1"
 keplergl = "^0.3.2"
+lightgbm = "^4.3.0"
+catboost = "^1.2.3"
+xgboost = "^2.0.3"
 
 
 [build-system]
